<?xml version="1.0" encoding="utf-8"?>
<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation" >

    <string name="app_name">eduroamCAT</string>
    <string name="advanced_menu">Advanced Options</string>
    <string name="about_menu">About App</string>
    <string name="support_menu">Get Support</string>
    <string name="settings_menu">Settings</string>
    <string name="title_tab1">Install</string>
    <string name="title_tab2">Profiles</string>
    <string name="title_tab3">Status</string>
    <string name="title_activity_status">Status</string>
    <string name="title_1xconfig">Status</string>
    <string name="title_activity_eapmetadata">Install Configuration File</string>
    <string name="action_settings">Settings</string>
    <string name="configureTitle">Configuration Options</string>
    <string name="quickConnect">Quick Connect</string>
    <string name="install">Install Profile</string>
    <string name="connect">Connect</string>
    <string name="removeProfile">Remove Profile</string>
    <string name="install_button">Install</string>
    <string name="discard_button">Discard</string>
    <string name="status_info">Status:</string>
	<string name="password_label">Password:</string>
	<string name="username_label">Username:</string>
	<string name="currentConfig_label">Current device configuration:</string>
	<string name="wifi_toggle_on">WiFi ON</string>
	<string name="wifi_toggle_off">WiFi OFF</string>
	<string name="debug_toggle_on">Debug ON</string>
	<string name="debug_toggle_off">Debug OFF</string>
	<string name="reconnect_button">Reconnect</string>
	<string name="duplicate_button">Duplicate Profile</string>
    <string name="advanced_text">**Advanced Status Output:\n</string>
	<string name="wifilog_text">WiFi Log:</string>
    <string name="error_with">Error with </string>
	<string name="version_menu">Version Information</string>
	<string name="profile_warning">Installing a profile will replace any existing eduroam settings</string>
	<string name="about_text">This app was made as part of the GN3+ OpenCall Project, SENSE.  Any app specific (not eduroam connectivity) problems/bugs or comments can be submitted to playstore@eduroam.org</string>
	<string name="wifiProfileMissing_text1">No WiFi Pofile Found</string>
	<string name="wifiProfileMissing_text2">Please load a profile file.</string>
	<string name="supportHTML_text1">Support Information</string>
	<string name="supportHTML_text_email">Email Address:</string>
	<string name="supportHTML_text_phone">Phone Number:</string>
	<string name="supportHTML_text_tou">Terms of Use:</string>
	<string name="supportHTML_text_web">Web Address:</string>
	<string name="authMethod_text_title">Authentication Method #</string>
	<string name="authMethod_text_eapmethod">EAP Method Type:</string>
	<string name="authMethod_text_innereapmethod">Inner EAP Method Type:</string>
	<string name="authMethod_text_outter">Outer Identity:</string>
	<string name="authMethod_text_server">Authentication Server:</string>
	<string name="authMethod_text_certcn">CA Certificate CN:</string>
	<string name="authMethod_text_error1">Authentication Methods</string>
	<string name="authMethod_text_error2">ERROR - No Auth Methods found.</string>
	<string name="summary_text_title">Configuration File Summary</string>
	<string name="summary_text_provider">Provider Name:</string>
	<string name="summary_text_description">Description:</string>
	<string name="summary_text1">Wifi enabled but no wifi networks connected</string>
	<string name="summary_text2">Please download an appropriate profile.</string>
	<string name="profileMissing_title">Profile Error</string>
	<string name="profileMissing_text1">Error with Profile:</string>
	<string name="eapprofileMissing_title">No EAP/WiFi Profiles Found</string>
	<string name="eapprofileMissing_text1">Wifi enabled and manually connected to %1$s</string>
    <!-- $1$s = wirless network name -->
	<string name="eapprofileMissing_text2">Please download an appropriate profile. </string>
	<string name="eapprofileMissing_text3">These can either be found at your home institutions instruction pages or at the eduroamCAT website: %1$s</string>
    <!-- $1$s = cat website url-->
	<string name="manualChecks_title">Manual Configuration Checks</string>
	<string name="removeProfile_title">Remove Profile</string>
	<string name="removeProfile_message">Are you sure you want to remove the profile?</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="button_ok">OK</string>
	<string name="profile_install">Installing Profile.</string>
	<string name="profile_installed">Profile installed</string>
	<string name="profile_tls_message">Please select your User Certificate manually using Settings > Wi-Fi > Modify eduroam -> User Certificate</string>
	<string name="profile_failed_message">Profile Failed to install! Please check your lock screen settings (a screen lock is required) and try connecting again</string>
	<string name="profile_install_failed">Profile install failed</string>
	<string name="profile_install_missing">Profile missing. Please install a profile first.</string>
	<string name="profile_install_missing_message">Profile missing.</string>
	<string name="profile_failed">Failed</string>
	<string name="profile_failed_all">All profiles failed.</string>
	<string name="config_file_error">Configuration File Error</string>
	<string name="config_file_text">File access error. Try downloading profile again.</string>
	<string name="config_file_text2">Read Error with Config File.</string>
	<string name="config_discarded">Discarded by user</string>
	<string name="profile_install_confirm">Are you sure you want to install the profile?</string>
	<string name="profile_install_confirm2">Are you sure you want to install profile?\nBy doing so, you agree to the following Terms of Use:\n</string>
	<string name="profile_install_title">Install Profile</string>
	<string name="status_wifi_supp_ok">Wifi Adapter and Supplicant OK.</string>
	<string name="status_wifi_supp_problem">Wifi Adapter or Supplicant problem.</string>
	<string name="status_wifi_disabled">Wifi currently Disabled!</string>
	<string name="advanced_on">Advanced Mode On</string>
	<string name="advanced_off">Advanced Mode Off</string>
	<string name="support_message1">The eduroamCAT app requires the use of a .eap-config profile from your home institution. Once you download this profile, you can load it from the Downloads app and it will install.</string>
	<string name="support_message2">The eduroamCAT app has installed a profile from %1$s</string>
    <!-- $1$s = institution name -->
	<string name="support_message3"> to configure eduroam. If you need help:</string>
	<string name="support_email">Email:</string>
	<string name="support_phone">Phone:</string>
	<string name="support_web">Web:</string>
	<string name="support_title">About</string>
	<string name="status_title">Connection Status</string>
	<string name="status_signal">Signal Strength:</string>
	<string name="status_link">Link Speed:</string>
	<string name="status_connection">Connection State:</string>
	<string name="status_supplicant">Supplicant State:</string>
	<string name="status_wifi">WiFi Enabled:</string>
	<string name="status_supplicant_ok">Supplicant OK:</string>
	<string name="status_failure">Failure Reason:</string>
	<string name="status_ip">IP Address:</string>
	<string name="status_mac">Device MAC Address:</string>
	<string name="with">with</string>
	<string name="subject_match_missing">Server Subject Match missing</string>
	<string name="subject_match">Server Subject Match</string>
	<string name="no_ca">No CA certificate found</string>
	<string name="missing">missing</string>
	<string name="error">error</string>
	<string name="distance">Distance Away</string>
	<string name="click_download">Click here to download</string>
	<string name="click_download2">Download</string>
	<string name="nearby">Nearby Configs</string>
	<string name="loading_profiles">Loading profiles</string>
	<string name="no_configs_within">No configs found within</string>
	<string name="no_configs">No configs nearby</string>
	<string name="no_configs_auto">No configs were automatically discovered within</string>
	<string name="loc_serv_check">Do you have Location Services turned on?</string>
	<string name="no_loc_serv">No location service active.</string>
	<string name="playstore_short">The official configuration tool for eduroam wireless</string>
	<string name="playstore_long">A tool to allow users to configure their device for eduroam wireless networks. This tool requires a configuration file from your home institution in order acquire the configuration settings needed. Due to limitations in the Android OS, the application needs to set up a screen lock if none is already set. The configuration file is in a standardised file format and can be obtained from eduroam Configuration Assistant Tool deployments (such as https://cat.eduroam.org and others). The tool also provides some status information on the eduroam connection.</string>
	<string name="profile_failed_marshmallow">Profile Failed to install! If a manual profile exists, please remove it first.</string>
	<string name="notification_title_connected">Connected</string>
	<string name="notification_message_connected">Successfully and securely connected!</string>
	<string name="list_more">List More</string>
	<string name="list_all">List All</string>
	<string name="manual_search">Manual Search</string>
	<string name="search">Search</string>
	<string name="scad_title">Configuration Discovery...</string>
	<string name="scad_geoip_failed">Configuration Discovery based on network failed</string>
	<string name="scad_geoip_title">Configuration Discovery with localisation...</string>
	<string name="scad_geoip_trying">Trying localisation lookup using network...</string>
	<string name="scad_geoip_insufficient">Insufficient location accuracy.</string>
	<string name="scad_geoip_noloc">No location service active. Please turn on Location Services and restart the app for auto discovery to work.</string>
	<string name="scad_geoip_no_configs_title">No Configs Nearby</string>
	<string name="scad_geoip_no_configs_message">No configs were automatically discovered within %1$d KMs.</string>
    <!-- $1$d = number represnting Kilometers -->
	<string name="scad_geoip_success">Configuration lookup success. Click search button below to list IdPs</string>
	<string name="eapprofileMissing_text4">You can also search for configs using the Manual Search button below. </string>
	<string name="scad_success">Configuration lookup success. Click search button below to list IdPs</string>
    <string name="manual_search_text">Enter institution name to search for</string>
    <string name="manual_search_more">list more</string>
    <string name="manual_search_fail">No results</string>
	<string name="select_menu">Select Config File</string>
	<!-- -New Strings Release for translation-->
	<string name="authMethod_text_clientcertcn">User ID:</string>
	<string name="authMethod_text_clientcertexp">Credential Expiry:</string>
	<string name="pinDialog">Enter import PIN:</string>
	<string name="pinFailed">PIN incorrect, unable to import!</string>
	<string name="storagePermission">No External Storage Permission</string>
</resources>
